--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                 <div class="row g-5">
                     <div class="col-lg-6">
                         <div class="about__thumb aos-init" data-aos="fade-right" data-aos-duration="1500">
-                            <img src="./files/pepebot.gif" alt="Product Image" 
+                            <img src="./files/pepebot_icon_yellow.png" alt="Product Image" 
                             class="animate-hover" style="width: 500px;">
                         </div>
                     </div>
@@ -222,12 +222,13 @@
                                 <li>uses ai & statistical analysis</li>
                                 <li>detects new pools rising fast</li>
                                 <li>detects scams & honeypots</li>
-                                <li>continuous evolving algorithm</li>
+                                <li>ever evolving algorithm</li>
                             </div>
                             <h3><br>auto sniper</h2>
                             <p class="autosniper">
                                 <div style="font-size: x-large; font-weight: bold;">
                                 <li>instant autobuy any signals</li>
+                                <li>unibot + ai power & security</li>
                             </div>
                             <!-- <h3><br>More in Roadmap</h2> -->
                             <!-- <p class="autosniper">
@@ -320,8 +321,8 @@
                                 <li>AI buy-signals bot</li>
                                 <li>AI auto-buyer bot</li>
                                 <li>AI-powered memes</li>
-                                <li>AI-alignment socials</li>
                                 <li>AI-decentralization</li>
+                                <li>AI-alignment market</li>
                                 <li>Pepe GPT bots saas</li>
                                 <li>Gated info channels</li>
                                 <li>100,000+ holders</li>
