shorter texts in utility

--- a/index.html
+++ b/index.html
@@ -218,17 +218,17 @@
                             <h3>signal bot</h2>
                             <p class="signalbot">
                                 <div style="font-size: x-large; font-weight: bold;">
-                                <li>detects early buy pressure</li>
-                                <li>uses ai & statistical analysis</li>
-                                <li>detects new pools rising fast</li>
-                                <li>detects scams & honeypots</li>
-                                <li>ever evolving algorithm</li>
+                                <li>detects buy pressure</li>
+                                <li>fast rising new pools</li>
+                                <li>uses ai & statistics</li>
+                                <li>detects honeypots</li>
+                                <li>evolving algorithm</li>
                             </div>
                             <h3><br>auto sniper</h2>
                             <p class="autosniper">
                                 <div style="font-size: x-large; font-weight: bold;">
-                                <li>instant autobuy any signals</li>
-                                <li>unibot + ai power & security</li>
+                                <li>autobuy signals</li>
+                                <li>unibot + ai power</li>
                             </div>
                             <!-- <h3><br>More in Roadmap</h2> -->
                             <!-- <p class="autosniper">
