shorter texts in utility

--- a/index.html
+++ b/index.html
@@ -163,13 +163,13 @@
                         </div>
                     </div>
 
-                    <div class="col-lg-6 center" style="padding-left: 60px;">
+                    <div class="col-lg-6 center" style="padding-left: 20px;">
                         <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000" >
                         <!-- <div class="banner__content aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000"> -->
                             <h1>Pepe Bot</h1>
                             <h2>Signal + Snipe</h2>
-                            <h3>find new pools rising</h3>
-                            <h3>auto buy them instantly</h3>
+                            <h3>find new hot pools</h3>
+                            <h3>auto buy instantly</h3>
                             <!-- <h2 style="color:yellow;">
                                 NOTE: Don't buy until LP Burned + CA Renounced
                             </h2> -->
@@ -210,7 +210,6 @@
                             class="animate-hover" style="width: 500px;">
                         </div>
                     </div>
-
                     <div class="col-lg-6" style="padding-left: 40px; margin-top: -10px;">
                         <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000">
                             <br><br>
@@ -264,7 +263,6 @@
                             class="animate-hover" style="width: 500px;">
                         </div>
                     </div>
-
                     <div class="col-lg-6" style="padding-left: 40px; margin-top: -10px;">
                         <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000">
                             <br><br>
@@ -281,11 +279,8 @@
                                 <li>buybacks & burns</li>
                                 <!-- <li>5% instant buy bonus</li> -->
                                 <!-- <div style="font-size: x-small;">CA:...</div> -->
-                            </div>
-                                <br>
-                                    
-
-
+                            </p>
+                        </div>
                     </div>
                 </div>
             </div>
