bring section 2 & 3 icons lower to text using margin-bottom: -120px;

--- a/index.html
+++ b/index.html
@@ -207,10 +207,10 @@
                     <div class="col-lg-6">
                         <div class="about__thumb aos-init" data-aos="fade-right" data-aos-duration="1500">
                             <img src="./files/pepebot_icon_yellow.png" alt="Product Image" 
-                            class="animate-hover" style="width: 500px;">
+                            class="animate-hover" style="width: 500px; margin-bottom: -120px;">
                         </div>
                     </div>
-                    <div class="col-lg-6" style="padding-left: 40px; margin-top: -10px;">
+                    <div class="col-lg-6" style="padding-left: 40px; margin-top: 0px;">
                         <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000">
                             <br><br>
                             <h2>Utility</h2>
@@ -260,10 +260,10 @@
                     <div class="col-lg-6">
                         <div class="about__thumb aos-init" data-aos="fade-right" data-aos-duration="1500">
                             <img src="./files/p3smile.png" alt="Tokenomics Image" 
-                            class="animate-hover" style="width: 500px;">
+                            class="animate-hover" style="width: 500px; margin-bottom: -120px">
                         </div>
                     </div>
-                    <div class="col-lg-6" style="padding-left: 40px; margin-top: -10px;">
+                    <div class="col-lg-6" style="padding-left: 40px; margin-top: 0px;">
                         <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000">
                             <br><br>
                             <h2>Tokenomics</h2>
