gpt chat & other info

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <style>
-        @import url('https://fonts.googleapis.com/css?family=Slackey&display=swap');
+        @import url('https://fonts.googleapis.com/css?family=Montserrat&display=swap');
     </style>
 
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Pepe Bots</title>
+    <title>XAIBOT</title>
 
-    <link rel="shortcut icon" href="./files/pepebot_icon_yellow.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./files/xlogo.png" type="image/x-icon">
 
     <link rel="stylesheet" href="./files/bootstrap.min.css">
     <link rel="stylesheet" href="./files/aos.css">
@@ -25,14 +25,14 @@
 
 <body data-aos-easing="ease" data-aos-duration="400" data-aos-delay="0" class="vsc-initialized">
 
-    <!-- <center><element style="font-family: Slackey; font-size: 50px;">
+    <!-- <center><element style="font-family: Montserrat; font-size: 50px;">
         This is a test message.
      </element>
     </center> -->
 
     <!-- ===============>> Preloader start here <<================= -->
     <div class="preloader" style="display: none;">
-        <img src="./files/p3buff.png" alt="Pepe Bots Logo">
+        <img src="./files/xlogo.png" alt="XAIBOT Logo">
     </div>
     <!-- ===============>> Preloader end here <<================= -->    
 
@@ -51,14 +51,14 @@
 
                     <!-- ===============>> Top Icon start here <<================= -->
                     <div>
-                        <img src="./files/pepebot_icon_yellow.png" 
+                        <img src="./files/xlogo.png" 
                         style="width:80px; margin-left: 0px; margin-top: 20px; position:relative;"
-                        class="animate-hover3" style="width: 50px; z-index: 999000999;">
+                        class="animate-hover-x3s" style="width: 50px; z-index: 999000999;">
                     </div>
                     <!-- ===============>> Top Icon end here <<================= -->
                         
                         <!-- <a href="index.html>
-                            <h1 class="logoh1">Pepe Bots</h1>
+                            <h1 class="logoh1">XAIBOT</h1>
                         </a> -->
 
                     </div>
@@ -88,7 +88,7 @@
                                 <ul class="submenu">
 
 
-                                    <li><a href="https://t.me/PepeAIchat" target="_blank">
+                                    <li><a href="https://t.me/xaibotclub" target="_blank">
                                             <svg class="svg-inline--fa fa-telegram" aria-hidden="true" focusable="false"
                                                 data-prefix="fab" data-icon="telegram" role="img"
                                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"
@@ -98,7 +98,7 @@
                                                 </path>
                                             </svg><!-- <i class="fa-brands fa-telegram"></i> Font Awesome fontawesome.com -->Telegram Chat
                                         </a></li>
-                                    <li><a href="https://t.me/PepeAIchat" target="_blank">
+                                    <li><a href="https://t.me/xaibotnews" target="_blank">
                                             <svg class="svg-inline--fa fa-telegram" aria-hidden="true" focusable="false"
                                                 data-prefix="fab" data-icon="telegram" role="img"
                                                 xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"
@@ -108,7 +108,7 @@
                                                 </path>
                                             </svg><!-- <i class="fa-brands fa-telegram"></i> Font Awesome fontawesome.com -->Telegram News
                                         </a></li>
-                                    <li><a href="https://twitter.com/PepeAIarmy"
+                                    <li><a href="https://twitter.com/xaibotclub"
                                             target="_blank">
                                             <svg class="svg-inline--fa fa-twitter" aria-hidden="true" focusable="false"
                                                 data-prefix="fab" data-icon="twitter" role="img"
@@ -126,7 +126,7 @@
                             </li>
                         </ul>
                         <div class="header-btn">
-                            <!-- <a href="https://t.me/PepeAIchat" target="_blank"
+                            <!-- <a href="https://t.me/xaibotclub" target="_blank"
                                 class="default-btn default-btn--secondary">
                                 <span>Buy Now
                             </a> -->
@@ -150,7 +150,7 @@
 
     <!-- ================> Banner section start here <================== -->
     <section id="home" class=""
-        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(29,137,59,1) 52%, rgba(0,0,0,1) 100%); height:100%;">
+        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(69,69,69,1) 52%, rgba(0,0,0,1) 100%); height:100%;">
         <div class="container">
             <div class="banner__wrapper">
                 <div class="row g-5 align-items-center">
@@ -158,23 +158,25 @@
                     <br><br><br><br><p></p><p></p>
                     <div class="col-lg-6">
                         <div class="banner__thumb d-flex justify-content-center aos-init" data-aos="fade-right" data-aos-duration="1000">
-                            <img src="./files/pepebot_gym.gif" alt="banner Image" 
-                            class="animate-growth" style="width: 100%;">
+                            <img src="./files/xlogo.png" alt="banner Image" 
+                            class="animate-growth" style="width: 100%; margin-left:400px;">
                         </div>
                     </div>
 
                     <div class="col-lg-6 center" style="padding-left: 40px;">
-                        <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000" >
+                        <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000">
                         <!-- <div class="banner__content aos-init aos-animate" data-aos="fade-right" data-aos-duration="1000"> -->
-                            <h1>Pepe Bot</h1>
-                            <h2>Signal + Snipe</h2>
-                            <h3>find new hot pools</h3>
-                            <h3>auto buy instantly</h3>
+                            <h1>X AI Bot</h1>
+                            <h2>Signal Sniper</h2>
+                            <h3>unibot + AI trader</h3>
+                            <h4>AI finds hot new pools</h4>
+                            <h4>can auto-buy instantly</h4>
+
                             <!-- <h2 style="color:yellow;">
                                 NOTE: Don't buy until LP Burned + CA Renounced
                             </h2> -->
                             <!-- <div class="btn-group hover" id="roadmap">
-                                <a href="https://t.me/PepeAIchat" target="_blank" class="default-btn"
+                                <a href="https://t.me/xaibotclub" target="_blank" class="default-btn"
                                     style="color: white; font-size:x-large; width: 315px; text-align: center;">
                                     Buy Now
                                 </a>
@@ -200,21 +202,21 @@
 
     <!-- ================> Product section start here <================== -->
     <section class="about padding-top padding-bottom" id="utility_top"
-        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(29,137,59,1) 52%, rgba(0,0,0,1) 100%);">
+        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(69,69,69,1) 52%, rgba(0,0,0,1) 100%);">
         <div class="container">
             <div class="about__wrapper">
                 <div class="row g-5">
                     <div class="col-lg-6">
                         <div class="about__thumb aos-init" data-aos="fade-right" data-aos-duration="1500">
-                            <img src="./files/pepebot_icon_yellow.png" alt="Product Image" 
-                            class="animate-hover" style="width: 500px; margin-bottom: -120px;">
+                            <img src="./files/spacex.png" alt="Product Image" 
+                            class="animate-hover-y4s" style="width: 500px; margin-bottom: -120px;">
                         </div>
                     </div>
                     <div class="col-lg-6" style="padding-left: 40px; margin-top: 0px;">
                         <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000">
                             <br><br>
                             <h2>Utility</h2>
-                            <h3>signal bot</h2>
+                            <h3>signal sniper</h2>
                             <p class="signalbot">
                                 <div style="font-size: x-large; font-weight: bold;">
                                 <li>detects buy pressure</li>
@@ -222,13 +224,14 @@
                                 <li>uses ai & statistics</li>
                                 <li>detects honeypots</li>
                                 <li>evolving algorithm</li>
+                                <li>AI auto-buys signals</li>
                             </div>
-                            <h3><br>auto sniper</h2>
+                            <!-- <h3><br>auto sniper</h2>
                             <p class="autosniper">
                                 <div style="font-size: x-large; font-weight: bold;">
-                                <li>autobuy signals</li>
-                                <li>unibot + ai power</li>
-                            </div>
+                                <li>AI autobuy signals</li>
+                                <li>can self-host funds</li>
+                            </div> -->
                             <!-- <h3><br>More in Roadmap</h2> -->
                             <!-- <p class="autosniper">
                                 <div style="font-size: x-large; font-weight: bold;">
@@ -253,14 +256,14 @@
 
     <!-- ================> Tokenomics section start here <================== -->
     <section class="about padding-top padding-bottom" id="tokenomics_top"
-        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(29,137,59,1) 52%, rgba(0,0,0,1) 100%);">
+        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(69,69,69,1) 52%, rgba(0,0,0,1) 100%);">
         <div class="container">
             <div class="about__wrapper">
                 <div class="row g-5">
                     <div class="col-lg-6">
                         <div class="about__thumb aos-init" data-aos="fade-right" data-aos-duration="1500">
-                            <img src="./files/p3smile.png" alt="Tokenomics Image" 
-                            class="animate-hover" style="width: 500px; margin-bottom: -120px">
+                            <img src="./files/astronaut.png" alt="Tokenomics Image" 
+                            class="animate-hover-y6s" style="width: 500px; margin-bottom: -120px">
                         </div>
                     </div>
                     <div class="col-lg-6" style="padding-left: 40px; margin-top: 0px;">
@@ -289,22 +292,37 @@
     <!-- ================> Tokenomics section end here <================== -->
 
     <br><br><br><br><p></p><p></p>        
+
+    <!-- ================> GPT section start here <================== -->
+    <section class="about padding-top padding-bottom center" id="roadmap_top">
+        <!-- <div class="container center">
+            <div class="about__wrapper center"> -->
+            <div align="center">
+                <h1 style="align-self: center;">Social GPT SaaS</h1>
+                <h2>Client Example</h2>
+                    <iframe src="https://pepe-chat.ai42.app/" width="800" height="600"></iframe>
+                </div>
+            <!-- </div>
+        </div> -->
+    </section>
+<!-- ================> GPT section end here <================== -->
+
     <div id="roadmap_info"></div>        
-    <br><br><br><br><p></p><p></p>
+    <br><br><br><br><p></p><p></p>        
 
     <!-- ================> Roadmap section start here <================== -->
     <section class="about padding-top padding-bottom" id="roadmap_top"
-        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(29,137,59,1) 52%, rgba(0,0,0,1) 100%);">
+        style="background: linear-gradient(0deg, rgba(0,0,0,1) 0%, rgba(69,69,69,1) 52%, rgba(0,0,0,1) 100%);">
         <div class="container">
             <div class="about__wrapper">
                 <div class="row g-5">
                     <div class="col-lg-6">
                         <div class="about__thumb aos-init" data-aos="fade-right" data-aos-duration="1500">
-                            <img src="./files/pepe-the-frog-pepe.gif" alt="Roadmap Image" 
-                            class="animate-growth" style="width: 100%;">
+                            <img src="./files/mars.png" alt="Roadmap Image" 
+                            class="animate-growth" style="width: 80%;">
                         </div>
                     </div>
-                    <div class="col-lg-6" style="padding-left: 40px; margin-top: 0px;">
+                    <div class="col-lg-6" style="padding-left: 40px; padding-top: 0px;">
                         <div class="about__content aos-init" data-aos="fade-left" data-aos-duration="1000">
 
                             <h2>Roadmap</h2>
@@ -316,9 +334,9 @@
                                 <li>AI buy-signals bot</li>
                                 <li>AI auto-buyer bot</li>
                                 <li>AI-powered memes</li>
+                                <li>AI-alignment soln</li>
                                 <li>AI-decentralization</li>
-                                <li>AI-alignment market</li>
-                                <li>Pepe GPT bots saas</li>
+                                <li>X AI GPT bots saas</li>
                                 <li>Gated info channels</li>
                                 <li>100,000+ holders</li>
                                 <li>$billions MC</li>
@@ -346,7 +364,7 @@
             <div class="container" style="align-content: center; font-size: xx-large;">
                 <div class="text-center py-4">
 socials - 
-            <a href="https://t.me/PepeAIgroup" target="_blank"> tg chat 
+            <a href="https://t.me/xaibotclub" target="_blank"> tg chat 
                     <svg class="svg-inline--fa fa-telegram" aria-hidden="true" focusable="false"
                         data-prefix="fab" data-icon="telegram" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"
@@ -356,7 +374,7 @@ socials -
                         </path>
                     </svg>
                 </a>
-            <a href="https://twitter.com/PepeAIarmy"
+            <a href="https://twitter.com/xaibotclub"
                     target="_blank"> twitter 
                     <svg class="svg-inline--fa fa-twitter" aria-hidden="true" focusable="false"
                         data-prefix="fab" data-icon="twitter" role="img"
@@ -367,7 +385,7 @@ socials -
                         </path>
                     </svg>
                 </a>
-                <a href="https://t.me/PepeAIposts" target="_blank"> tg news 
+                <a href="https://t.me/xaibotnews" target="_blank"> tg news 
                     <svg class="svg-inline--fa fa-telegram" aria-hidden="true" focusable="false"
                         data-prefix="fab" data-icon="telegram" role="img"
                         xmlns="http://www.w3.org/2000/svg" viewBox="0 0 496 512"
@@ -377,7 +395,7 @@ socials -
                         </path>
                     </svg>
                 </a>
-             info@pepeai.army
+             info@xaibot.club
                 </div>
             </div>
         </div>
