--- a/index.html
+++ b/index.html
@@ -75,6 +75,9 @@
                                 <a href="#tokenomics_info">Token</a>
                             </li>
                             <li>
+                                <a href="#gpt_sass">GPT</a>
+                            </li>
+                            <li>
                                 <a href="#roadmap_info">Roadmap</a>
                             </li>
 
@@ -276,9 +279,7 @@
                                 <li>LP burned</li>
                                 <li>renounced</li>
                                 <li>100% revshare</li>
-                                <li>0% tax rev to devs</li>
-                                <li>all tax rev goes to:</li>
-                                <li>liq, holders & burns</li>
+                                <li>1% tax rev to devs</li>
                                 <li>buybacks & burns</li>
                                 <!-- <li>5% instant buy bonus</li> -->
                                 <!-- <div style="font-size: x-small;">CA:...</div> -->
@@ -291,15 +292,15 @@
     </section>
     <!-- ================> Tokenomics section end here <================== -->
 
-    <br><br><br><br><p></p><p></p>        
+    <br><br><p></p>
 
     <!-- ================> GPT section start here <================== -->
-    <section class="about padding-top padding-bottom center" id="roadmap_top">
+    <section class="about padding-top padding-bottom center">
         <!-- <div class="container center">
             <div class="about__wrapper center"> -->
             <div align="center">
                 <h1 style="align-self: center;">Social GPT SaaS</h1>
-                <h2>Client Example</h2>
+                <h2 id="gpt_sass">3RD Party Client Example</h2>
                     <iframe src="https://pepe-chat.ai42.app/" width="800" height="600"></iframe>
                 </div>
             <!-- </div>
@@ -308,7 +309,6 @@
 <!-- ================> GPT section end here <================== -->
 
     <div id="roadmap_info"></div>        
-    <br><br><br><br><p></p><p></p>        
 
     <!-- ================> Roadmap section start here <================== -->
     <section class="about padding-top padding-bottom" id="roadmap_top"
