--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <li>
                                 <a href="#gpt_sass">GPT</a>
                             </li>
-                            <li>
+                                <li>
                                 <a href="#roadmap_info">Roadmap</a>
                             </li>
 
@@ -300,8 +300,8 @@
             <div class="about__wrapper center"> -->
             <div align="center">
                 <h1 style="align-self: center;">Social GPT SaaS</h1>
-                <h2 id="gpt_sass">3RD Party Client Example</h2>
-                    <iframe src="https://pepe-chat.ai42.app/" width="800" height="600"></iframe>
+                <div class="responsive-container">
+                    <iframe class="responsive-iframe"  src="https://x.ai42.app/"></iframe>
                 </div>
             <!-- </div>
         </div> -->
